--- a/app/globals.css
+++ b/app/globals.css
@@ -74,3 +74,70 @@
     @apply bg-background text-foreground;
   }
 }
+
+@keyframes jump {
+  0% {
+    transform: translate3d(0px, 50%, 0px);
+  }
+  70% {
+    transform: translate3d(0px, -50%, 0px);
+  }
+  85% {
+    transform: translate3d(0px, -40%, 0px);
+  }
+  100% {
+    transform: translate3d(0px, -50%, 0px);
+  }
+}
+
+@keyframes return {
+  0% {
+    transform: translate3d(0px, -50%, 0px);
+  }
+  70% {
+    transform: translate3d(0px, 50%, 0px);
+  }
+  85% {
+    transform: translate3d(0px, 40%, 0px);
+  }
+  100% {
+    transform: translate3d(0px, 50%, 0px);
+  }
+}
+
+
+.smile-icon {
+  transform: translate3d(0px, 50%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
+  transform-style: preserve-3d;
+  transition: transform 0.5s ease-in-out;
+}
+
+.smile-icon:hover {
+  animation: jump 1s ease-in-out forwards;
+}
+
+.smile-icon:not(:hover) {
+  animation: return 1s ease-in-out forwards;
+}
+
+.footer-emoji {
+  flex-direction: column;
+  align-items: flex-start;
+  width: 5em;
+  height: 5.8em;
+  display: flex;
+  position: absolute;
+  top: auto;
+  bottom: 0%;
+  left: auto;
+  right: auto;
+}
+
+.image {
+  padding-top: 6px;
+}
+
+.image-contain {
+  object-fit: contain;
+  overflow: visible;
+}
